add test explanation, revise classification

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1719,
+   "execution_count": 2074,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1720,
+   "execution_count": 2075,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 1720,
+     "execution_count": 2075,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1721,
+   "execution_count": 2076,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1722,
+   "execution_count": 2077,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1723,
+   "execution_count": 2078,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1724,
+   "execution_count": 2079,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1725,
+   "execution_count": 2080,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
        "<Axes: xlabel='count', ylabel='gender'>"
       ]
      },
-     "execution_count": 1725,
+     "execution_count": 2080,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1726,
+   "execution_count": 2081,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "Text(0.5, 1.0, 'Frequency Distribution of Parental Level of Education')"
       ]
      },
-     "execution_count": 1726,
+     "execution_count": 2081,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1727,
+   "execution_count": 2082,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "Text(0.5, 1.0, 'Proportion Distribution of Parental Level of Education')"
       ]
      },
-     "execution_count": 1727,
+     "execution_count": 2082,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1728,
+   "execution_count": 2083,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "<Axes: xlabel='count', ylabel='lunch'>"
       ]
      },
-     "execution_count": 1728,
+     "execution_count": 2083,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1729,
+   "execution_count": 2084,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "<Axes: xlabel='count', ylabel='test_preparation_course'>"
       ]
      },
-     "execution_count": 1729,
+     "execution_count": 2084,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1730,
+   "execution_count": 2085,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1731,
+   "execution_count": 2086,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1732,
+   "execution_count": 2087,
    "metadata": {},
    "outputs": [
     {
@@ -512,32 +512,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1733,
+   "execution_count": 2088,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mean of the math score column is 66\n",
-      "The mean of the reading score column is 69\n",
-      "The mean of the writing score column is 68\n"
+      "Math Model\n",
+      "Based on the math column the third decile is 59\n",
+      "Based on the math column the sixth decile is 70\n",
+      "Reading Model\n",
+      "Based on the math column the third decile is 59\n",
+      "Based on the math column the sixth decile is 70\n",
+      "Writing Model\n",
+      "Based on the math column the third decile is 60\n",
+      "Based on the math column the sixth decile is 73\n"
      ]
     }
    ],
    "source": [
-    "math_score_mean = math.floor(df['math_score'].mean())\n",
-    "reading_score_mean = math.floor(df['reading_score'].mean())\n",
-    "writing_score_mean = math.floor(df['writing_score'].mean())\n",
+    "# For the Naive Bayes to have 3 classes, scores column is divided into three, Above Average, Average, Below Average\n",
     "\n",
-    "print(f'The mean of the math score column is {math_score_mean}')\n",
-    "print(f'The mean of the reading score column is {reading_score_mean}')\n",
-    "print(f'The mean of the writing score column is {writing_score_mean}')"
+    "math_below_average = math.floor(df['math_score'].quantile(0.3))\n",
+    "math_above_average = math.floor(df['math_score'].quantile(0.6))\n",
+    "print('Math Model')\n",
+    "print(f'Based on the math column the third decile is {math_below_average}')\n",
+    "print(f'Based on the math column the sixth decile is {math_above_average}')\n",
+    "\n",
+    "reading_below_average = math.floor(df['reading_score'].quantile(0.3))\n",
+    "reading_above_average = math.floor(df['reading_score'].quantile(0.6))\n",
+    "print('Reading Model')\n",
+    "print(f'Based on the math column the third decile is {math_below_average}')\n",
+    "print(f'Based on the math column the sixth decile is {math_above_average}')\n",
+    "\n",
+    "\n",
+    "writing_below_average = math.floor(df['writing_score'].quantile(0.3))\n",
+    "writing_above_average = math.floor(df['writing_score'].quantile(0.6))\n",
+    "print('Writing Model')\n",
+    "print(f'Based on the math column the third decile is {writing_below_average}')\n",
+    "print(f'Based on the math column the sixth decile is {writing_above_average}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1734,
+   "execution_count": 2089,
    "metadata": {},
    "outputs": [
     {
@@ -577,9 +596,9 @@
        "      <td>bachelor's degree</td>\n",
        "      <td>standard</td>\n",
        "      <td>none</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
+       "      <td>Above Average</td>\n",
+       "      <td>Average</td>\n",
+       "      <td>Above Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -587,9 +606,9 @@
        "      <td>some college</td>\n",
        "      <td>standard</td>\n",
        "      <td>completed</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
+       "      <td>Average</td>\n",
+       "      <td>Above Average</td>\n",
+       "      <td>Above Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -597,9 +616,9 @@
        "      <td>master's degree</td>\n",
        "      <td>standard</td>\n",
        "      <td>none</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
+       "      <td>Above Average</td>\n",
+       "      <td>Above Average</td>\n",
+       "      <td>Above Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -607,9 +626,9 @@
        "      <td>associate's degree</td>\n",
        "      <td>free/reduced</td>\n",
        "      <td>none</td>\n",
-       "      <td>Failed</td>\n",
-       "      <td>Failed</td>\n",
-       "      <td>Failed</td>\n",
+       "      <td>Below Average</td>\n",
+       "      <td>Below Average</td>\n",
+       "      <td>Below Average</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -617,9 +636,9 @@
        "      <td>some college</td>\n",
        "      <td>standard</td>\n",
        "      <td>none</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
-       "      <td>Passed</td>\n",
+       "      <td>Above Average</td>\n",
+       "      <td>Above Average</td>\n",
+       "      <td>Above Average</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -633,15 +652,15 @@
        "3    male          associate's degree  free/reduced                    none   \n",
        "4    male                some college      standard                    none   \n",
        "\n",
-       "  math_score reading_score writing_score  \n",
-       "0     Passed        Passed        Passed  \n",
-       "1     Passed        Passed        Passed  \n",
-       "2     Passed        Passed        Passed  \n",
-       "3     Failed        Failed        Failed  \n",
-       "4     Passed        Passed        Passed  "
+       "      math_score  reading_score  writing_score  \n",
+       "0  Above Average        Average  Above Average  \n",
+       "1        Average  Above Average  Above Average  \n",
+       "2  Above Average  Above Average  Above Average  \n",
+       "3  Below Average  Below Average  Below Average  \n",
+       "4  Above Average  Above Average  Above Average  "
       ]
      },
-     "execution_count": 1734,
+     "execution_count": 2089,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,15 +668,15 @@
    "source": [
     "# Changing the score columns to be either just Passed or Failed based on their scores\n",
     "\n",
-    "df['math_score'] = df['math_score'].apply(lambda x: 'Passed' if x >= math_score_mean else 'Failed')\n",
-    "df['reading_score'] = df['reading_score'].apply(lambda x: 'Passed' if x >= reading_score_mean else 'Failed')\n",
-    "df['writing_score'] = df['writing_score'].apply(lambda x: 'Passed' if x >= writing_score_mean else 'Failed')\n",
+    "df['math_score'] = df['math_score'].apply(lambda x: 'Above Average' if x >= math_above_average else 'Average' if x >= math_below_average else 'Below Average')\n",
+    "df['reading_score'] = df['reading_score'].apply(lambda x: 'Above Average' if x >= reading_above_average else 'Average' if x >= reading_below_average else 'Below Average')\n",
+    "df['writing_score'] = df['writing_score'].apply(lambda x: 'Above Average' if x >= writing_above_average else 'Average' if x >= writing_below_average else 'Below Average')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1735,
+   "execution_count": 2090,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,23 +696,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1736,
+   "execution_count": 2091,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on training the math model accuracy is 60.75%\n",
-      "Based on testing the math model accuracy is 64.5%\n",
-      "              precision    recall  f1-score   support\n",
+      "Based on training the math model accuracy is 45.62%\n",
+      "Based on testing the math model accuracy is 50.0%\n",
+      "               precision    recall  f1-score   support\n",
       "\n",
-      "      Failed       0.60      0.61      0.61        90\n",
-      "      Passed       0.68      0.67      0.68       110\n",
+      "Above Average       0.61      0.66      0.64        86\n",
+      "      Average       0.32      0.31      0.31        62\n",
+      "Below Average       0.51      0.46      0.48        52\n",
       "\n",
-      "    accuracy                           0.65       200\n",
-      "   macro avg       0.64      0.64      0.64       200\n",
-      "weighted avg       0.65      0.65      0.65       200\n",
+      "     accuracy                           0.50       200\n",
+      "    macro avg       0.48      0.48      0.48       200\n",
+      " weighted avg       0.49      0.50      0.50       200\n",
       "\n"
      ]
     }
@@ -724,23 +744,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1737,
+   "execution_count": 2092,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on training the reading model accuracy is 64.25%\n",
-      "Based on testing the reading model accuracy is 65.0%\n",
-      "              precision    recall  f1-score   support\n",
+      "Based on training the reading model accuracy is 48.25%\n",
+      "Based on testing the reading model accuracy is 46.5%\n",
+      "               precision    recall  f1-score   support\n",
       "\n",
-      "      Failed       0.59      0.66      0.62        88\n",
-      "      Passed       0.71      0.64      0.67       112\n",
+      "Above Average       0.65      0.61      0.63        90\n",
+      "      Average       0.16      0.05      0.08        60\n",
+      "Below Average       0.36      0.70      0.48        50\n",
       "\n",
-      "    accuracy                           0.65       200\n",
-      "   macro avg       0.65      0.65      0.65       200\n",
-      "weighted avg       0.66      0.65      0.65       200\n",
+      "     accuracy                           0.47       200\n",
+      "    macro avg       0.39      0.45      0.39       200\n",
+      " weighted avg       0.43      0.47      0.43       200\n",
       "\n"
      ]
     }
@@ -771,23 +792,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1738,
+   "execution_count": 2093,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on training the writing model accuracy is 67.12%\n",
-      "Based on testing the writing model accuracy is 69.0%\n",
-      "              precision    recall  f1-score   support\n",
+      "Based on training the writing model accuracy is 50.75%\n",
+      "Based on testing the writing model accuracy is 47.0%\n",
+      "               precision    recall  f1-score   support\n",
       "\n",
-      "      Failed       0.61      0.71      0.66        84\n",
-      "      Passed       0.76      0.67      0.72       116\n",
+      "Above Average       0.64      0.69      0.66        89\n",
+      "      Average       0.23      0.05      0.08        66\n",
+      "Below Average       0.33      0.67      0.44        45\n",
       "\n",
-      "    accuracy                           0.69       200\n",
-      "   macro avg       0.69      0.69      0.69       200\n",
-      "weighted avg       0.70      0.69      0.69       200\n",
+      "     accuracy                           0.47       200\n",
+      "    macro avg       0.40      0.47      0.39       200\n",
+      " weighted avg       0.43      0.47      0.42       200\n",
       "\n"
      ]
     }
@@ -814,6 +836,13 @@
     "# Classification Report\n",
     "writing_classification_report = metrics.classification_report(writing_y_test, writing_test_prediction)\n",
     "print(writing_classification_report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The testing of this Naive Bayes Classification Application is done at model checking par using sci kit's accuracy score analyzer based on the given prediction from x and y training data then checked on x and y test data."
    ]
   }
  ],
